fluxcd/apps/overlays/home-lab/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
    created-by: fluxcd
