fluxcd/apps/overlays/home-lab/argocd/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  gatewayClassName: traefik
  listeners:
    - name: argocd-http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
